--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-
+title: My Portfolio! 
+description: Hello, this site will be updated with my digital forensics work to showcase I know a little bit about what im doing. ^_^
 remote_theme: pages-themes/minimal@v0.2.0
-
 plugins:
   - jekyll-remote-theme
